--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/discussion/DiscussionIntro.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/discussion/DiscussionIntro.tex
@@ -1,3 +1,3 @@
-This chapter will look at the final product and see if the Targeted Features, see section \ref{sec:Spec}, have been fulfilled and how well they are covered. After the discussion there will be a perspectivation of the project to look if some aspects of the program might be useful for the future, like how the interface is made to be user friendly and how there has been made tests on early program builds to help find errors.
+This chapter will look at the final product and see if the Targeted Features, (see section \ref{sec:Spec}), have been fulfilled and how well they are covered. After the discussion there will be a perspectivation of the project to look if some aspects of the program might be useful in the future, like how the interface is made to be user friendly and how there has been made tests on early program builds to help finding errors.
 
-In this chapter the final product will be reflected upon whether if the Targeted Features (TF) have been fulfilled and how well the specification requirements have been meet (see section \ref{sec:Spec}).
+In this chapter the final product will be reflected upon whether the Targeted Features (TF) have been fulfilled and how well the specification requirements have been met (see section \ref{sec:Spec}).
