--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/ColorGiver.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/development/ColorGiver.tex
@@ -10,7 +10,7 @@ The second step is to check which items are neighbors through two "for" loops. T
 \kode{The 2 "for" loops and the "if" statement that check if the two items shares any point. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing2}{ColorGiverListing2.txt}
 
 Thereafter the list "neighbor" is gone through to remove all the duplicates of themselves from the list. This works with one "for" loop which keeps track of which items are being worked with and when the loop is done the neighbor list is sorted. Then there is a "while" loop which goes through all the neighbors (items that are next to it) and checks if the item itself is in it and removes it. It will also check if the number after the current is the same, if it is the same it will remove one of them. This can be seen in listing \ref{lst:ColorGiverListing3}.
-\kode{"If" statements which check the item after the current item to see if they are identical, and if they are, remove one of them. This slice of code is taken from the function Colors in frmMain}{ColorGiverListing3}{ColorGiverListing3.txt}
+\kode{"If" statements which check the item after the current item to see if they are identical and if they are remove one of them. This slice of code is taken from the function Colors in frmMain}{ColorGiverListing3}{ColorGiverListing3.txt}
 
 The last step taken is to go through the item list and give a color to each item. In this part the colors are numbers, where number 0 is the standard color. First there is a "for" loop which sets the current item. Before the current item is given a number based on its neighbors, its value is set to 0. Then there is a "while" loop which goes through all the neighbor of the item and check if the color is the same. If they are the same, then the color number of the item is increased by 1. This can be seen in listing \ref{lst:ColorGiverListing4}. When the neighbor list is finished, the color is saved in the item, the color number is set to 0 again, and the next item in the list is checked.
 \kode{"If" statement that checks if an item and neighbor have the same color. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing4}{ColorGiverListing4.txt}
